Fix taxonomy build

--- a/thehive-templates/StopForumSpam_1_0/long.html
+++ b/thehive-templates/StopForumSpam_1_0/long.html
@@ -1,4 +1,4 @@
-<div class="panel panel-warning" ng-if="success && content.results.length > 0">
+<div class="panel panel-warning" ng-if="success">
 	<div class="panel-heading">
 		StopForumSpam - {{artifact.data | fang}}
 	</div>
