--- a/thehive-templates/URLhaus_0_1_0/long.html
+++ b/thehive-templates/URLhaus_0_1_0/long.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info" ng-if="success">
   <div class="panel-heading">
-    URLhaus search resutls for
+    URLhaus search results for
     <strong>{{artifact.data}}</strong>
   </div>
   <div class="panel-body">
