--- a/thehive-templates/Threatcrowd_1_0/long.html
+++ b/thehive-templates/Threatcrowd_1_0/long.html
@@ -9,7 +9,7 @@
             <br/>
             <a href="{{content.permalink}}">View report on threatcrowd.org</a>
         </h4>
-        <table class="table table-bordered">
+        <table class="table table-bordered" ng-if="content.references">
             <tr>
                 <th>References</th>
             </tr>
@@ -17,7 +17,7 @@
 				<td>{{ref}}</td>
 			</tr>
         </table>
-        <table class="table table-bordered">
+        <table class="table table-bordered" ng-if="content.domains">
             <tr>
                 <th>Domains</th>
             </tr>
@@ -25,7 +25,7 @@
                 <td>{{dom}}</td>
 			</tr>
         </table>
-        <table class="table table-bordered">
+        <table class="table table-bordered"  ng-if="content.subdomains">
             <tr>
                 <th>Subdomains</th>
             </tr>
@@ -33,7 +33,7 @@
                 <td>{{dom}}</td>
 			</tr>
         </table>
-        <table class="table table-bordered">
+        <table class="table table-bordered" ng-if="content.emails">
             <tr>
                 <th>Emails</th>
             </tr>
@@ -41,7 +41,7 @@
                 <td>{{email}}</td>
 			</tr>
         </table>
-        <table class="table table-bordered">
+        <table class="table table-bordered"  ng-if="content.resolutions">
             <tr>
                 <th colspan="3">Resolutions</th>
             </tr>
