Catch empty content

--- a/thehive-templates/Threatcrowd_1_0/long.html
+++ b/thehive-templates/Threatcrowd_1_0/long.html
@@ -3,7 +3,7 @@
         Threatcrowd analysis for 
         <strong>{{artifact.data}}</strong>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" ng-if="content">
         <h4 class="dl-horizontal">
             Votes :  <strong>{{content.votes}}</strong>
             <br/>
