#212 WIP - fix typo

--- a/thehive-templates/FileInfo_3_0/long.html
+++ b/thehive-templates/FileInfo_3_0/long.html
@@ -83,7 +83,7 @@
                         </uib-accordion>
                         <div class="panel panel-primary" ng-if="r.submodule_section_header=='Oletools DDE Analysis'">
                             <div class="panel-heading">
-                                <h4 class="panel-title>"{{r.submodule_section_header}}</h4>
+                                <h4 class="panel-title">{{r.submodule_section_header}}</h4>
                             </div>
                             <div class="panel-body">
                                 <dl class="dl-horizontal" ng-repeat="(k,v) in r.submodule_section_content">
