--- a/thehive-templates/FileInfo_3_0/long.html
+++ b/thehive-templates/FileInfo_3_0/long.html
@@ -34,30 +34,29 @@
             <!--  Oletools -->
             <div ng-if="result.submodule_name=='Oletools Submodule'">
 
-
                 <div class="panel-body">
 
                     <!-- summary -->
                     <div>
-                        <div ngif=result.summary class="panel panel-primary">
+                        <div ng-if="result['summary']" class="panel panel-primary">
                             <div class="panel-heading">
                                 <h4 class="panel-title">Summary</h4>
                             </div>
-                            <div class="panel-body">
+                            <div class="panel-body" >
                                 <dl class="dl-horizontal">
                                     <dt>Olevba version</dt>
-                                    <dd class="wrap">{{result.summary["Olevba version"]}}</dd>
+                                    <dd class="wrap">{{result['summary']['Olevba']}}</dd>
                                 </dl>
                                 <dl class="dl-horizontal">
                                     <dt>Msodde version</dt>
-                                    <dd class="wrap">{{result.summary["Msodde version"]}}</dd>
+                                    <dd class="wrap">{{result['summary']['Msodde']}}</dd>
                                 </dl>
 
 
                                 <dl class="dl-horizontal">
                                         <dt>Oletools scanner</dt>
                                         <dd class="wrap">
-                                            <span class="label" ng-repeat="t in result.summary.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+                                            <span class="label" ng-repeat="t in result['summary']['taxonomies']" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
                                                 {{t.namespace}}:{{t.predicate}}={{t.value}}
                                             </span>
                                         </dd>
@@ -241,6 +240,21 @@
             <!-- PE Information submodule-->
             <div ng-if="result.submodule_name=='PE Information'">
                 <div class="panel-body">
+
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                               Summary
+                            </h4>
+                        </div>
+                        <div class="panel-body">
+                            <dl class="dl-horizontal">
+                                    <dt>pefile version</dt>
+                                    <dd class="wrap">{{result['summary']['pefile']}}</dd>
+                                </dl>
+                        </div>
+
+                    </div>
                     <div  ng-repeat="r in result.results">
                         <uib-accordion>
 
@@ -337,21 +351,8 @@
                                 </pre>
                             </div>
 
-                    <!--<div ng-repeat="r in result.results" class="panel panel-primary">-->
-                            <!--<div class="panel-heading" ng-if="r.submodule_section_header=='Headers'">-->
-                                <!--<h4 class="panel-title">-->
-                                   <!--{{r.submodule_section_header}}-->
-                                <!--</h4>-->
-                            <!--</div>-->
-                            <!--<div class="panel-body">-->
-                                <!--<div ng-repeat="(k,v) in r.submodule_section_content">-->
-
-                                <!--</div>-->
-                            <!--</div>-->
-
                         </uib-accordion>
 
-                        <!--</div>-->
                     </div>
                 </div>
             </div>
