#270 - fix bugs in ThreatCrowd reports

--- a/thehive-templates/Threatcrowd_1_0/long.html
+++ b/thehive-templates/Threatcrowd_1_0/long.html
@@ -57,6 +57,10 @@
 			</tr>
         </table>
     </div>
+
+    <div class="panel-body" ng-if="!content.permalink">
+        No result found
+    </div>
 </div>
 
 <div class="panel panel-danger" ng-if="!success">
