--- a/thehive-templates/UnshortenLink_1_0/long.html
+++ b/thehive-templates/UnshortenLink_1_0/long.html
@@ -3,12 +3,18 @@
         Unshorten Link for <strong>{{artifact.data | fang}}</strong>
     </div>
     <div class="panel-body">
-            <span>found:{{content.found}}</span>
         <div ng-if="content.found">
-            <span>url:{{content.url | fang}}</span>
+            <dl class="dl-horizontal" ng-if="content.found">
+                    <dt>Unshortened URL</dt>
+                    <dd>{{content.url | fang}}</dd>
+                </dl>
+        </div>
+        <div ng-if="!content.found">
+            <span>The link could not be unshortened.</span>
         </div>
     </div>
 </div>
+
 <div class="panel panel-danger" ng-if="!success">
     <div class="panel-heading">
         <strong>{{artifact.data | fang}}</strong>
