--- a/thehive-templates/Hashdd_1_0/long.html
+++ b/thehive-templates/Hashdd_1_0/long.html
@@ -1,24 +1,24 @@
 <!-- Success -->
 <div class="panel panel-danger" ng-if="success">
     <div class="panel-heading">
-        Hashdd report for <strong>{{artifact.data}}</strong>
+        Hashdd report for <strong>{{artifact.data | fang}}</strong>
     </div>
     <div class="panel-body">
             <dl class="dl-horizontal" ng-if="content.known_level">
                 <dt>Known Level</dt>
-                <dd>{{content.known_level || "No Known Level given."}}</dd>
+                <dd>{{content.known_level || "No known level given."}}</dd>
                 <dt>File Name</dt>
-                <dd>{{content.file_name || "No file_name given."}}</dd>
+                <dd>{{content.file_name || "No file name given."}}</dd>
                 <dt>File Path</dt>
-                <dd>{{content.file_absolute_path || "No file_absolute_path given."}}</dd>
+                <dd>{{content.file_absolute_path || "No file path given."}}</dd>
                 <dt>File Size</dt>
                 <dd>{{content.size || "No size given."}}</dd>
                 <dt>Product Manufacturer</dt>
-                <dd>{{content.product_manufacturer || "No product_manufacturer given."}}</dd>
+                <dd>{{content.product_manufacturer || "No product manufacturer given."}}</dd>
                 <dt>Product Name</dt>
-                <dd>{{content.product_name || "No product_name given."}}</dd>
+                <dd>{{content.product_name || "No product name given."}}</dd>
                 <dt>Product Version</dt>
-                <dd>{{content.product_version || "No product_version given."}}</dd>
+                <dd>{{content.product_version || "No product version given."}}</dd>
                 <dt>Architecture</dt>
                 <dd>{{content.architecture || "No architecture given."}}</dd>
                 <dt>md5</dt>
@@ -35,10 +35,10 @@
 
 <!-- General error  -->
 <div class="panel panel-danger" ng-if="!success">
+    <div class="panel-heading">
+        <strong>{{artifact.data | fang}}</strong>
+    </div>
     <div class="panel-body">
-        <dl class="dl-horizontal" ng-if="content.errorMessage">
-            <dt><i class="fa fa-warning"></i> hashdd: </dt>
-            <dd class="wrap">{{content.errorMessage}}</dd>
-        </dl>
+        {{content.errorMessage}}
     </div>
 </div>
