--- a/thehive-templates/DomainTools_Reputation_2_0/long.html
+++ b/thehive-templates/DomainTools_Reputation_2_0/long.html
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="panel panel-info" ng-if="success">
+<div class="panel panel-primary" ng-if="success">
     <div class="panel-heading">
         <strong>{{artifact.data | fang}}</strong>
     </div>
@@ -23,34 +23,15 @@
 
             </dd>
 		</dl>
-        <br><br>
-        <h4 class="panel-title">Reasons</h4>
-        <br>
-		<table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Domain</th>
-                    <th>Risk Score</th>
-                    <th>Reasons</th>
-                </tr>
-            </thead>
-            <tbody ng-repeat="r in content.components">
-                <tr>
-                    <td>{{r.domain}}</td>
-                    <td>
-                        <span class="label" ng-class="{'label-success' : content.risk_score == 0,  'label-warning' :  content.risk_score > 0 && content.risk_score <= 50,
-                            'label-danger': content.risk_score > 50}">
-                        {{r.risk_score}}
+        <dl ng-if="content.reasons" class="dl-horizontal">
+			<dt>Reasons</dt>
+			<dd>
+                <span ng-repeat="r in content.reasons " class="label label-primary mr-xxxs">
+                    {{content.risk_score}}
                 </span>
-                    </td>
-                    <td >
-                        <ul class="list-unstyled">
-                            <li ng-repeat="reason in r.reasons">{{reason}}</li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+
+            </dd>
+		</dl>
 
     </div>
 </div>
