--- a/thehive-templates/IBMXForce_Lookup_1_0/long.html
+++ b/thehive-templates/IBMXForce_Lookup_1_0/long.html
@@ -10,7 +10,7 @@
 
 			<dl class="dl-horizontal">
 				<dt>Score</dt>
-				<dd><span class="label">{{content.score_value}}</span></dd>
+				<dd><span class="label label-primary">{{content.score_value}}</span></dd>
 			</dl>
 			<dl class="dl-horizontal" ng-if="content.families.length > 0">
 				<dt>Families</dt>
