--- a/thehive-templates/Hashdd_Status_1_0/long.html
+++ b/thehive-templates/Hashdd_Status_1_0/long.html
@@ -1,5 +1,5 @@
 <!-- Success -->
-<div class="panel panel-danger" ng-if="success">
+<div class="panel panel-info" ng-if="success">
     <div class="panel-heading">
         Hashdd report for <strong>{{artifact.data | fang}}</strong>
     </div>
