New analyzer Google DNS over HTTPS

--- a/thehive-templates/GoogleDNS_resolve_1_0_0/long.html
+++ b/thehive-templates/GoogleDNS_resolve_1_0_0/long.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <p><strong>Question : </strong>{{content.Question[0].name}} IN {{content.Question[0].type}}</p>
         <p><strong>Comment : </strong>{{content.Comment}}</p>
-        <table class="table table-hover"">
+        <table class="table table-hover">
             <tr>
                 <th>Name</th>
                 <th>Type</th>
