--- a/thehive-templates/Onyphe_Datascan_1_0/long.html
+++ b/thehive-templates/Onyphe_Datascan_1_0/long.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info" ng-if="success">
 	<div class="panel-heading">
-		Onyphe Ports - <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
+		Onyphe Datascan - <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
 	</div>
 	<div class="panel-body">
         <dl class="dl-horizontal">
@@ -8,7 +8,7 @@
                 My IP
             </dt>
             <dd>
-                {{content.ports.myip}}
+                {{content.datascan.myip}}
             </dd>
         </dl>
         <dl class="dl-horizontal">
@@ -16,7 +16,7 @@
                 Number of results
             </dt>
             <dd>
-                {{content.ports.count}}
+                {{content.datascan.count}}
             </dd>
         </dl>
         <dl class="dl-horizontal">
@@ -24,11 +24,11 @@
                 Error(s)
             </dt>
             <dd>
-                {{content.ports.error}}
+                {{content.datascan.error}}
             </dd>
         </dl>
 
-		<table class="table" ng-if="content.ports.results.length !== 0 ">
+		<table class="table" ng-if="content.datascan.results.length !== 0 ">
             <thead>
                 <th>Category</th>
                 <th>Type</th>
@@ -37,11 +37,15 @@
                 <th>IPv4</th>
                 <th>Organisation</th>
                 <th>Location</th>
-                <th>OS</th>
                 <th>Port</th>
-                <th>Seen date</th>
+                <th>Protocol</th>
+                <th>OS</th>
+                <th>Product</th>
+                <th>Product Version</th>
+                <th>Seen Date</th>
+                <th>Data MD5</th>
             </thead>
-            <tbody ng-repeat="r in content.ports.results | orderBy:'-seen_date'">
+            <tbody ng-repeat="r in content.datascan.results | orderBy:'-seen_date'">
                 <tr>
                     <td>{{r["@category"]}}</td>
                     <td>{{r["@type"]}}</td>
@@ -50,9 +54,13 @@
                     <td>{{r.ip}}</td>
                     <td>{{r.organization}}</td>
                     <td>{{r.location}}</td>
-                    <td>{{r.os}}</td>
                     <td>{{r.port}}</td>
+                    <td>{{r.protocol}}</td>
+                    <td>{{r.os}}</td>
+                    <td>{{r.product}}</td>
+                    <td>{{r.productversion}}</td>
                     <td>{{r.seen_date}}</td>
+                    <td>{{r.datamd5}}</td>
                 </tr>
             </tbody>
         </table>
