--- a/thehive-templates/PassiveTotal_Passive_Dns_2_0/long.html
+++ b/thehive-templates/PassiveTotal_Passive_Dns_2_0/long.html
@@ -1,10 +1,8 @@
-
 <div class="report-PT" ng-if="success">
     <style>
         .report-PT dl {
             margin-bottom: 2px;
         }
-
     </style>
 
 
@@ -51,10 +49,10 @@
                             <th>First seen</th>
                             <th>Last seen</th>
                         </tr>
-                        <tr ng-repeat="c in content.results">
+                        <tr ng-repeat="c in content.results | orderBy:'-firstSeen'">
                             <td>
                                 <div ng-repeat="s in c.source">
-                                <span>{{s}}</span>
+                                    <span>{{s}}</span>
                                 </div>
                             </td>
                             <td>{{c.resolve || 'None'}}</td>
