--- a/thehive-templates/VMRay_3_0/long.html
+++ b/thehive-templates/VMRay_3_0/long.html
@@ -76,7 +76,7 @@
 	<div class="panel-body">
 		<dl class="dl-horizontal">
 			<dt>Error:</dt>
-			<dd>{{content.error}}</dd>
+			<dd>{{content.errorMessage}}</dd>
 		</dl>
 	</div>
 </div>
