--- a/thehive-templates/Pulsedive_GetIndicator_1_0/long.html
+++ b/thehive-templates/Pulsedive_GetIndicator_1_0/long.html
@@ -28,7 +28,7 @@
         <div class="panel panel-warning" ng-if="content.riskfactors">
             <div class="panel-heading">Risk factors</div>
             <div class="panel-body">
-                <ul ng-repeat="(k, v) in content.riskfactors">
+                <ul style="list-style: none" ng-repeat="(k, v) in content.riskfactors">
                     <li>
                         <span class="label"
                               ng-class="{'label-success': v.risk === 'none', 'label-primary': v.risk === 'low', 'label-warning': v.risk === 'medium', 'label-danger': v.risk === 'high'}">
@@ -56,16 +56,26 @@
                     </dd>
                     <dt>Added</dt>
                     <dd>{{content.stamp_added | date}}</dd>
+                    <dt>Seen</dt>
+                    <dd>{{content.stamp_seen | date}}</dd>
                     <dt>Probed</dt>
                     <dd>{{content.stamp_probed | date}}</dd>
                     <dt>Updated</dt>
                     <dd>{{content.stamp_updated | date}}</dd>
                     <dt>Retired</dt>
-                    <dd>{{content.stamp_retired | date}}</dd>
+                    <dd><span class="label label-secondary" ng-if="content.retired">Retired on {{content.stamp_retired | date}}</span></dd>
                 </dl>
             </div>
         </div>
         <uib-accordion>
+            <div uib-accordion-group class="panel panel-info" heading="Attributes" ng-if="content.attributes" is-open="true">
+                <div class="panel-body">
+                    <dl class="dl-horizontal" ng-repeat="(a, c) in content.attributes">
+                        <dt>{{a}}</dt>
+                        <dd><ul style="list-style: none"><li ng-repeat="item in c">{{item}}</li></ul></dd>
+                    </dl>
+                </div>
+            </div>
             <div uib-accordion-group class="panel panel-info" heading="Feeds" ng-if="content.feeds">
                 <div class="panel-body">
                     <table class="table">
