--- a/thehive-templates/Pulsedive_GetIndicator_1_0/long.html
+++ b/thehive-templates/Pulsedive_GetIndicator_1_0/long.html
@@ -1,4 +1,4 @@
-<div class="panel panel-info" ng-if="success">
+<div class="panel panel-info" ng-if="success && !content.error">
     <div class="panel-heading">
         Pulsedive Report for <strong>{{artifact.data}}</strong>
     </div>
@@ -124,6 +124,11 @@
             </div>
         </uib-accordion>
     </div>
+</div>
+
+<div class="panel panel-warning" ng-if="success && content.error">
+    <div class="panel-heading"><strong>{{artifact.data | fang}}</strong></div>
+    <div class="panel-body">{{content.error}}</div>
 </div>
 
 <div class="panel panel-danger" ng-if="!success">
