--- a/thehive-templates/C1fApp_1_0/short.html
+++ b/thehive-templates/C1fApp_1_0/short.html
@@ -1,1 +1,3 @@
-<span class="label label-info">Basic: {{content.count || 0}} record(s)</span>`
+<span class="label" ng-repeat="t in content.taxonomies" ng-class="{'info': 'label-info', 'safe': 'label-success', 'suspicious': 'label-warning', 'malicious':'label-danger'}[t.level]">
+    {{t.namespace}}:{{t.predicate}}="{{t.value}}"
+</span>
